Added smooth scrolling to landing page

--- a/ResponsiveWebDesign/landing-page/index.html
+++ b/ResponsiveWebDesign/landing-page/index.html
@@ -15,23 +15,24 @@
 <body>
 
   <head>
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
 <header id="header">
   <nav id="nav-bar">  
-    <a class="nav-link" href="#header"><img id="header-img" src="https://cdn.iconscout.com/public/images/icon/premium/png-512/trading-graph-analytics-bitcoin-currency-finance-trade-323c3fcd6b7b71f6-512x512.png"/></a>
+    <a id="top"class="nav-link" href="#main"><img id="header-img" src="https://cdn.iconscout.com/public/images/icon/premium/png-512/trading-graph-analytics-bitcoin-currency-finance-trade-323c3fcd6b7b71f6-512x512.png"/></a>
     <h1>MarketSync</h1>
     
     <ul class="topnav">
-        <li class="right"><a class="nav-link" href="#newsletter">Newsletter</a></li>
-        <li class="right"><a class="nav-link" href="#pricing">Pricing</a></li>
-        <li class="right"><a class="nav-link" href="#services">Services</a></li>
-        <li class="right"><a class="nav-link" href="#about">About</a></li>
+        <li class="right"><a id="newsletter-link"class="nav-link" href="#newsletter">Newsletter</a></li>
+        <li class="right"><a id="pricing-link"class="nav-link" href="#pricing">Pricing</a></li>
+        <li class="right"><a id="services-link" class="nav-link" href="#services">Services</a></li>
+        <li class="right"><a id="about-link"class="nav-link" href="#about">About</a></li>
       </ul>
   </nav>
 </header>
-<main>
+<main id="main">
 <div class="bgimg-1">
   <div class="caption">
     <span class="border">DOMINATE THE MARKETS</span>
