Made projects responsive. Added Skills section

--- a/ResponsiveWebDesign/portfolio-page/index.html
+++ b/ResponsiveWebDesign/portfolio-page/index.html
@@ -14,10 +14,10 @@
 
 <body>
 
-  <body>
-
-  <div class="bgimg-1"> </div>
-  <section ="welcome-section">
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<body>
+  <section id="welcome-section" class="bgimg-1"><h1>Sometimes this rules can be quite arbitrary and get in the way</h1></section>
+  <section id="real-welcome-section">
     <div id="title-container">
       <h1 id="title">Back-End Web Developer.</h1>
       <p>Hello, I'm Ivan, a software engineer from Mexico with experience in  back-end development using Java. Currently learning front-end development and JavaScript.</p>
@@ -25,85 +25,85 @@
     </div> 
   </section>
 
-<section id="projects"> 
-  <h3 >Projects</h3>
-  <hr class="project-separator">
-  <div class="project-row">
-    <div class="project-logo">
-      <img class="project-img" src="https://image.ibb.co/kcZChe/komodcrypto.png"/>
+  <section id="projects"> 
+    <h4 class="sections-title">Projects</h4>
+    <hr class="project-separator">
+    <div class="project-tile">
+      <div class="project-logo">
+        <img class="project-img" src="https://image.ibb.co/eceF3K/komodocrypto.png"/>
+      </div>
+      <div class="project-info">
+        <a class="project-link" href="https://github.com/hbwhyte/komodo-crypto" target="_blank"><h4 class="project-title">KomodoCrypto</h4></a>
+        <p class="project-desc">CodingNomads.co final group project for the 2018 Bali Bootcamp. KomodoCrypto connects to over 10 exchanges to get the best prices for any coin and acts automatically to profit from price disparities. Collaborated on the design, coding and implementation.</p>
+        <ul class="skill-list">
+          <li>Java</li>
+          <li>Spring Framework</li>
+          <li>REST API</li>
+        </ul>
+      </div>
     </div>
-    <div class="project-info">
-      <h4 class="project-title">Komodo Crypto</h4>
-      <p class="project-desc">CodingNomads.co final project for the 2018 Bali Bootcamp. An automated arbitrage trading bot for cryptocurrencies. Collaborated on the design, coding and implementation.</p>
-      <ul class="skill-list">
-        <li>Back end</li>
-        <li>Java</li>
-        <li>REST API</li>
-      </ul>
+    <hr class="project-separator">
+    <div class="project-tile">
+      <div class="project-logo">
+        <img class="project-img"  src="https://image.ibb.co/n7g6Az/stocktwitsentiment.png"/>
+      </div>
+      <div class="project-info">
+        <a class="project-link" href="https://github.com/Zaytt/StockTwitsSentiment" target="_blank"><h4 class="project-title">StockTwits Sentiment</h4></a>
+        <p class="project-desc">Keeps track of the sentiment of any ticker on StockTwits and gives it a score depending on the percentage of bullish and bearish twits. </p>
+        <ul class="skill-list">
+          <li>Java</li>
+          <li>Spring Framework</li>
+          <li>StockTwits API</li>
+        </ul>
+      </div>
     </div>
-  </div>
-  <hr class="project-separator">
-  <div class="project-row">
-    <div class="project-logo">
-      <img class="project-img"  src="https://image.ibb.co/kBkw8K/stocktwitssentiment.png"/>
+    <hr class="project-separator">
+    <div class="project-tile">
+      <div class="project-logo">
+        <img class="project-img" src="https://image.ibb.co/dhsDqz/marketsync.png"/>
+      </div>
+      <div class="project-info">
+        <a class="project-link" href="https://codepen.io/KanjCoder/full/PBaebZ/" target="_blank"><h4 class="project-title">MarketSync Trading</h4></a>
+        <p class="project-desc">A fake landing page for a market trading service. Part of FreeCodeCamp's coding challenges.</p>
+        <ul class="skill-list">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Responsive Design</li>
+        </ul>
+      </div>
     </div>
-    <div class="project-info">
-      <h4 class="project-title">StockTwits Sentiment</h4>
-      <p class="project-desc">Keeps track of the sentiment of any ticker on StockTwits and gives it a score depending on the percentage of bullish and bearish twits. </p>
-      <ul class="skill-list">
-        <li>Back end</li>
-        <li>Java</li>
-        <li>StockTwits API</li>
-      </ul>
+  </section>
+  <section id="skills-section">
+    <h4 class="sections-title">Skills<h4>
+    <div id="skills-div">
+      <div class="skills-grid">
+        <div class="skill">
+          <img class="skill-logo" src="https://image.ibb.co/mrxSJK/java_logo.png"/>
+        </div>
+        <div class="skill">
+          <img class="skill-logo" src="https://image.ibb.co/g1vgdK/spring_logo.png"/>
+        </div>
+        <div class="skill">
+          <img class="skill-logo" src="https://image.ibb.co/cP1nJK/mysql_logo.png"/>
+        </div>
+      </div>
+      <div class="skills-grid">
+        <div class="skill">
+          <img class="skill-logo" src="https://image.ibb.co/dbMXkz/html_logo.png"/>
+        </div>
+        <div class="skill">
+          <img class="skill-logo" src="https://image.ibb.co/bJRbCe/css3_logo.png"/>
+        </div>
+        <div class="skill">
+          <img class="skill-logo" src="https://image.ibb.co/mONuyK/javascript_logo.png"/>
+        </div>
+      </div>
     </div>
-  </div>
-  <hr class="project-separator">
-  <div class="project-row">
-    <div class="project-logo">
-      <img class="project-img" src="https://image.ibb.co/mQkk2e/marketsync.png"/>
-    </div>
-    <div class="project-info">
-      <h4 class="project-title">MarketSync Trading</h4>
-      <p class="project-desc">A fake landing page for a market trading service. Part of FreeCodeCamp's coding challenges.</p>
-      <ul class="skill-list">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Responsive Design</li>
-      </ul>
-    </div>
-  </div>
-  
-</section>
+  </section>
 
-<div class="bgimg-2">
-  <div class="caption">
-    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">LESS HEIGHT</span>
-  </div>
-</div>
 
-<div style="position:relative;">
-  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-    <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
-  </div>
-</div>
 
-<div class="bgimg-3">
-  <div class="caption">
-    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SCROLL UP</span>
-  </div>
-</div>
 
-<div style="position:relative;">
-  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-    <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
-  </div>
-</div>
-
-<div class="bgimg-1">
-  <div class="caption">
-    <span class="border">COOL!</span>
-  </div>
-</div>
 
 </body>
   
