Finished contact form

--- a/ResponsiveWebDesign/portfolio-page/index.html
+++ b/ResponsiveWebDesign/portfolio-page/index.html
@@ -15,6 +15,7 @@
 <body>
 
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
   <section id="welcome-section" class="bgimg-1"><h1>Sometimes this rules can be quite arbitrary and get in the way</h1></section>
   <section id="real-welcome-section">
@@ -100,11 +101,30 @@
       </div>
     </div>
   </section>
-
-
-
-
-
+  <section id="contact-section">
+    <h4 id="contact-title">Contact me</h4>
+    <div id="contact-div">
+     <form class="cf">
+      <div class="half left cf">
+        <input type="text" id="input-name" placeholder="Name">
+        <input type="email" id="input-email" placeholder="Email address">
+        <input type="text" id="input-subject" placeholder="Subject">
+      </div>
+      <div class="half right cf">
+        <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
+      </div>  
+      <input type="submit" value="Send" id="input-submit">
+      </form> 
+    </div>
+    <hr class="section-separator">
+    <div id="social-media-div">
+      <a href="https://twitter.com/KanjTrader" target="_blank" class="fa fa-twitter fa-2x"></a>
+      <a href="https://www.linkedin.com/in/ivanchaveze/" target="_blank"  class="fa fa-linkedin fa-2x"></a>
+      <a id="profile-link" href="https://github.com/Zaytt" target="_blank"  class="fa fa-github fa-2x"></a>
+      <a href="https://codepen.io/KanjCoder/#" target="_blank"  class="fa fa-codepen fa-2x"></a>
+    </div>
+  </section>
+      
 </body>
   
   
