Finished portfolio page

--- a/ResponsiveWebDesign/portfolio-page/index.html
+++ b/ResponsiveWebDesign/portfolio-page/index.html
@@ -19,6 +19,13 @@
 <body>
   <section id="welcome-section" class="bgimg-1"><h1>Sometimes this rules can be quite arbitrary and get in the way</h1></section>
   <section id="real-welcome-section">
+    <nav>
+    <div id="navbar">
+      <a id="welcome-link" class="nav-link" href="#welcome-section">About me</a>
+      <a id="projects-link" class="nav-link" href="#projects">Projects</a>
+      <a id="welcome-link" class="nav-link" href="#contact-section">Contact me</a>
+    </div>
+    </nav>
     <div id="title-container">
       <h1 id="title">Back-End Web Developer.</h1>
       <p>Hello, I'm Ivan, a software engineer from Mexico with experience in  back-end development using Java. Currently learning front-end development and JavaScript.</p>
@@ -128,6 +135,11 @@
 </body>
   
   
+
+    <script  src="js/index.js"></script>
+
+
+
 
 </body>
 
