Finished Pomodoro Clock

--- a/FrontEndLibraries/pomodoro-clock/public/index.html
+++ b/FrontEndLibraries/pomodoro-clock/public/index.html
@@ -21,13 +21,16 @@
     -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet"> 
+    
     <title>JitomaTimer</title>
   </head>
   <body>
-    
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <audio  id="beep"  src='https://www.myinstants.com/media/sounds/alarm_clock.mp3' ></audio>
+    <audio  id="keepup"  src='https://www.myinstants.com/media/sounds/gta-san-andreas-keep-up-motherfucker1.mp3' ></audio>
     <div id="root"></div>
     <!--
       This HTML file is a template.
